examples/haitun-workspace/skills/fusion-flow/fusion_flow/generated/FusionFlowParser.py
# Generated from grammar/FusionFlow.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FusionFlowParser ( Parser ):

    grammarFileName = "FusionFlow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'input_workflow'", "'output_workflow'", 
                     "'max_concurrency'", "'workflow_timeout'", "'program_path'", 
                     "'step_name'", "'step_instruction'", "'step_executor'", 
                     "'step_timeout'", "'max_attempts'", "'consumes'", "'produces'", 
                     "'foreach_item'", "'resource_requirement'", "'agent_config'", 
                     "'allowed_tool'", "'max_output_tokens'", "'temperature'", 
                     "'reasoning_effort'", "'max_turns'", "'agent_system_prompt'", 
                     "'workflow'", "'if'", "'const'", "<INVALID>", "<INVALID>", 
                     "'!'", "<INVALID>", "<INVALID>", "'=='", "'='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'^'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'", "','", 
                     "';'", "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WORKFLOW", "IF", "CONST", 
                      "AND", "OR", "NOT", "TRUE", "FALSE", "ASSERT_EQ", 
                      "NUMERIC_EQ", "NOT_EQUALS", "LTE", "GTE", "LT", "GT", 
                      "PLUS", "MINUS", "STAR", "DIVIDE", "MODULO", "CARET", 
                      "NUMBER", "UPID", "LOWID", "RELATIVE_PATH_ID", "QUOTEDCONSTANTID", 
                      "STRING_LITERAL", "COLON", "COMMA", "SEMICOLON", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_workflowFile = 0
    RULE_workflowDecl = 1
    RULE_workflowName = 2
    RULE_workflowItem = 3
    RULE_constDecl = 4
    RULE_conceptNameList = 5
    RULE_assertion = 6
    RULE_formula = 7
    RULE_comparison = 8
    RULE_comparisonOp = 9
    RULE_term = 10
    RULE_operatorCall = 11
    RULE_ifExpression = 12
    RULE_termList = 13
    RULE_listLiteral = 14
    RULE_atomicTerm = 15
    RULE_identifier = 16
    RULE_conceptName = 17
    RULE_operatorName = 18
    RULE_workflowBuiltinOperator = 19
    RULE_workflowOwnerOperator = 20
    RULE_programOwnerOperator = 21
    RULE_stepOwnerOperator = 22
    RULE_dataResourceOperator = 23
    RULE_agentOwnerOperator = 24
    RULE_constantName = 25
    RULE_booleanLiteral = 26

    ruleNames =  [ "workflowFile", "workflowDecl", "workflowName", "workflowItem", 
                   "constDecl", "conceptNameList", "assertion", "formula", 
                   "comparison", "comparisonOp", "term", "operatorCall", 
                   "ifExpression", "termList", "listLiteral", "atomicTerm", 
                   "identifier", "conceptName", "operatorName", "workflowBuiltinOperator", 
                   "workflowOwnerOperator", "programOwnerOperator", "stepOwnerOperator", 
                   "dataResourceOperator", "agentOwnerOperator", "constantName", 
                   "booleanLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    WORKFLOW=22
    IF=23
    CONST=24
    AND=25
    OR=26
    NOT=27
    TRUE=28
    FALSE=29
    ASSERT_EQ=30
    NUMERIC_EQ=31
    NOT_EQUALS=32
    LTE=33
    GTE=34
    LT=35
    GT=36
    PLUS=37
    MINUS=38
    STAR=39
    DIVIDE=40
    MODULO=41
    CARET=42
    NUMBER=43
    UPID=44
    LOWID=45
    RELATIVE_PATH_ID=46
    QUOTEDCONSTANTID=47
    STRING_LITERAL=48
    COLON=49
    COMMA=50
    SEMICOLON=51
    LPAREN=52
    RPAREN=53
    LBRACE=54
    RBRACE=55
    LBRACK=56
    RBRACK=57
    WS=58
    LINE_COMMENT=59
    BLOCK_COMMENT=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class WorkflowFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FusionFlowParser.EOF, 0)

        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.ConstDeclContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(FusionFlowParser.SEMICOLON)
            else:
                return self.getToken(FusionFlowParser.SEMICOLON, i)

        def workflowDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.WorkflowDeclContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.WorkflowDeclContext,i)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_workflowFile




    def workflowFile(self):

        localctx = FusionFlowParser.WorkflowFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_workflowFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 54
                self.constDecl()
                self.state = 55
                self.match(FusionFlowParser.SEMICOLON)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.workflowDecl()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

            self.state = 67
            self.match(FusionFlowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WorkflowDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORKFLOW(self):
            return self.getToken(FusionFlowParser.WORKFLOW, 0)

        def workflowName(self):
            return self.getTypedRuleContext(FusionFlowParser.WorkflowNameContext,0)


        def LBRACE(self):
            return self.getToken(FusionFlowParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FusionFlowParser.RBRACE, 0)

        def workflowItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.WorkflowItemContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.WorkflowItemContext,i)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_workflowDecl




    def workflowDecl(self):

        localctx = FusionFlowParser.WorkflowDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_workflowDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(FusionFlowParser.WORKFLOW)
            self.state = 70
            self.workflowName()
            self.state = 71
            self.match(FusionFlowParser.LBRACE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77098168474402814) != 0):
                self.state = 72
                self.workflowItem()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(FusionFlowParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WorkflowNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(FusionFlowParser.IdentifierContext,0)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_workflowName




    def workflowName(self):

        localctx = FusionFlowParser.WorkflowNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_workflowName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WorkflowItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assertion(self):
            return self.getTypedRuleContext(FusionFlowParser.AssertionContext,0)


        def SEMICOLON(self):
            return self.getToken(FusionFlowParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return FusionFlowParser.RULE_workflowItem




    def workflowItem(self):

        localctx = FusionFlowParser.WorkflowItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_workflowItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.assertion()
            self.state = 83
            self.match(FusionFlowParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(FusionFlowParser.CONST, 0)

        def constantName(self):
            return self.getTypedRuleContext(FusionFlowParser.ConstantNameContext,0)


        def COLON(self):
            return self.getToken(FusionFlowParser.COLON, 0)

        def conceptNameList(self):
            return self.getTypedRuleContext(FusionFlowParser.ConceptNameListContext,0)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_constDecl




    def constDecl(self):

        localctx = FusionFlowParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(FusionFlowParser.CONST)
            self.state = 86
            self.constantName()
            self.state = 87
            self.match(FusionFlowParser.COLON)
            self.state = 88
            self.conceptNameList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConceptNameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conceptName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.ConceptNameContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.ConceptNameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FusionFlowParser.COMMA)
            else:
                return self.getToken(FusionFlowParser.COMMA, i)

        def getRuleIndex(self):
            return FusionFlowParser.RULE_conceptNameList




    def conceptNameList(self):

        localctx = FusionFlowParser.ConceptNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_conceptNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.conceptName()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==50:
                self.state = 91
                self.match(FusionFlowParser.COMMA)
                self.state = 92
                self.conceptName()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.TermContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.TermContext,i)


        def ASSERT_EQ(self):
            return self.getToken(FusionFlowParser.ASSERT_EQ, 0)

        def operatorCall(self):
            return self.getTypedRuleContext(FusionFlowParser.OperatorCallContext,0)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_assertion




    def assertion(self):

        localctx = FusionFlowParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assertion)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.term(0)
                self.state = 99
                self.match(FusionFlowParser.ASSERT_EQ)
                self.state = 100
                self.term(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.operatorCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # FormulaContext
            self.right = None # FormulaContext

        def LPAREN(self):
            return self.getToken(FusionFlowParser.LPAREN, 0)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.FormulaContext,i)


        def RPAREN(self):
            return self.getToken(FusionFlowParser.RPAREN, 0)

        def NOT(self):
            return self.getToken(FusionFlowParser.NOT, 0)

        def comparison(self):
            return self.getTypedRuleContext(FusionFlowParser.ComparisonContext,0)


        def AND(self):
            return self.getToken(FusionFlowParser.AND, 0)

        def OR(self):
            return self.getToken(FusionFlowParser.OR, 0)

        def getRuleIndex(self):
            return FusionFlowParser.RULE_formula



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FusionFlowParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_formula, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 106
                self.match(FusionFlowParser.LPAREN)
                self.state = 107
                self.formula(0)
                self.state = 108
                self.match(FusionFlowParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 110
                self.match(FusionFlowParser.NOT)
                self.state = 111
                self.formula(4)
                pass

            elif la_ == 3:
                self.state = 112
                self.comparison()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = FusionFlowParser.FormulaContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 115
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 116
                        self.match(FusionFlowParser.AND)
                        self.state = 117
                        localctx.right = self.formula(4)
                        pass

                    elif la_ == 2:
                        localctx = FusionFlowParser.FormulaContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 118
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 119
                        self.match(FusionFlowParser.OR)
                        self.state = 120
                        localctx.right = self.formula(3)
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.TermContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.TermContext,i)


        def comparisonOp(self):
            return self.getTypedRuleContext(FusionFlowParser.ComparisonOpContext,0)


        def getRuleIndex(self):
            return FusionFlowParser.RULE_comparison




    def comparison(self):

        localctx = FusionFlowParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.term(0)
            self.state = 127
            self.comparisonOp()
            self.state = 128
            self.term(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERIC_EQ(self):
            return self.getToken(FusionFlowParser.NUMERIC_EQ, 0)

        def NOT_EQUALS(self):
            return self.getToken(FusionFlowParser.NOT_EQUALS, 0)

        def LT(self):
            return self.getToken(FusionFlowParser.LT, 0)

        def LTE(self):
            return self.getToken(FusionFlowParser.LTE, 0)

        def GT(self):
            return self.getToken(FusionFlowParser.GT, 0)

        def GTE(self):
            return self.getToken(FusionFlowParser.GTE, 0)

        def getRuleIndex(self):
            return FusionFlowParser.RULE_comparisonOp




    def comparisonOp(self):

        localctx = FusionFlowParser.ComparisonOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparisonOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 135291469824) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # TermContext
            self.op = None # Token
            self.right = None # TermContext

        def LPAREN(self):
            return self.getToken(FusionFlowParser.LPAREN, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FusionFlowParser.TermContext)
            else:
                return self.getTypedRuleContext(FusionFlowParser.TermContext,i)


        def RPAREN(self):
            return self.getToken(FusionFlowParser.RPAREN, 0)

        def ifExpression(self):
            return self.getTypedRuleContext(FusionFlowParser.IfExpressionContext,0)


        def operatorCall(self):
            return self.getTypedRuleContext(FusionFlowParser.OperatorCallContext,0)


        def listLiteral(self):
            return self.getTypedRuleContext(FusionFlowParser.ListLiteralContext,0)


        def PLUS(self):
            return self.getToken(FusionFlowParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(FusionFlowParser.MINUS, 0)

        def atomicTerm(self):
            return self.getTypedRuleContext(FusionFlowParser.AtomicTermContext,0)


        def CARET(self):
            return self.getToken(FusionFlowParser.CARET, 0)

        def STAR(self):
            return self.getToken(FusionFlowParser.STAR, 0)

        def DIVIDE(self):
            return self.getToken(FusionFlowParser.DIVIDE, 0)

        def MODULO(self):
            return self.getToken(FusionFlowParser.MODULO, 0)

        def getRuleIndex(self):
            return FusionFlowParser.RULE_term


